[package]
name = "h"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "firmware"
crate-type = ["staticlib"]

[dependencies]
cfg-if = "0.1.10"
